--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   intl: ^0.17.0
   collection: 1.16.0
   # 打开浏览器所需要的
-#  url_launcher: ^6.1.3
+  url_launcher: ^6.0.13
   fluttertoast: ^8.0.9
   flutter_spinkit: ^5.1.0
   # 网络请求
