--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,12 @@ android {
     }
 
     buildTypes {
+//        debug {
+//            signingConfig signingConfigs.debug
+//            minifyEnabled true
+//            useProguard true
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//        }
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
