--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   cached_network_image: ^2.2.0+1
   flutter_rating_bar: ^3.0.1+1
   sqflite: ^2.0.3 #sqflite是Flutter的SQLite插件，它能在App端能够高效的存储和处理数据库数据
+  get: ^4.6.5 #getx
+  image_picker: ^0.8.5+3 #选择图片
 dev_dependencies:
   flutter_test:
     sdk: flutter
