--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,12 @@ dependencies:
   image_picker: ^0.8.5+3 #选择图片
   animations: ^2.0.3 #flutter官方提供的动画
   webview_flutter: ^3.0.4 # webview以及和js交互
+
+  #百度地图
+  flutter_baidu_mapapi_map: ^3.2.1
+#  flutter_baidu_mapapi_search: ^3.2.0
+#  flutter_baidu_mapapi_utils: ^3.2.0
+#  flutter_bmflocation: ^3.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
