--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ dependencies:
   pull_to_refresh: ^2.0.0
   #获取设备信息
   device_info: ^2.0.3
+  #闪屏页
+  flutter_native_splash: ^2.2.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
