--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
+#Disables R8 for Android Library modules only.
+android.enableR8.libraries = false
+#Disables R8 for all modules.
+android.enableR8 = false
