--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   collection: 1.16.0
   # 打开浏览器所需要的
   url_launcher: ^6.0.13
-  fluttertoast: ^8.0.9
+  fluttertoast: 8.0.9
   flutter_spinkit: ^5.1.0
   # 网络请求
   http: ^0.13.4
