--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ dependencies:
   flutter_rating_bar: ^3.0.1+1
   sqflite: ^2.0.3 #sqflite是Flutter的SQLite插件，它能在App端能够高效的存储和处理数据库数据
   get: ^4.6.5 #getx
-  image_picker: ^0.8.5+3 #选择图片
+  # 这个暂时先注释，安卓会报：Failed to transform activity-1.6.1.aar (androidx.activity:activity:1.6.1)
+#  image_picker: ^0.8.7 #选择图片
   animations: ^2.0.3 #flutter官方提供的动画
   webview_flutter: ^3.0.4 # webview以及和js交互
   flutter_pickers: ^2.1.8 #省市区选择器 参考：https://zhuanlan.zhihu.com/p/350350490
@@ -81,7 +82,10 @@ dependencies:
   flutter_native_splash: ^2.2.8
   #动画 执行flutter pub add simple_animations就可以
   simple_animations: ^5.0.0+2
-
+#  # 解析html标签
+#  flutter_html: ^2.2.1
+  #GridView动态布局，解决GridView高度固定的问题
+  flutter_staggered_grid_view: ^0.6.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
