--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
-        maven {url 'https://maven.aliyun.com/repository/google/'}
-        maven {url 'https://maven.aliyun.com/repository/public/'}
-        maven {url 'https://maven.aliyun.com/repository/gradle-plugin/'}
-        maven { url "https://storage.googleapis.com/download.flutter.io" }
-        google()
-        mavenCentral()
-        jcenter()
+//        maven { url "https://storage.googleapis.com/download.flutter.io" }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+
+//        google()
+//        mavenCentral()
+//        jcenter()
     }
 
     dependencies {
@@ -19,14 +20,13 @@ buildscript {
 allprojects {
     repositories {
         //解决flutter相关插件下载不下来的问题
-        maven { url "https://storage.googleapis.com/download.flutter.io" }
-
-        maven {url 'https://maven.aliyun.com/repository/google/'}
-        maven {url 'https://maven.aliyun.com/repository/public/'}
-        maven {url 'https://maven.aliyun.com/repository/gradle-plugin/'}
-        google()
-        mavenCentral()
-        jcenter()
+//        maven { url "https://storage.googleapis.com/download.flutter.io" }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+//        google()
+//        mavenCentral()
+//        jcenter()
     }
 }
 
