--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.17.0
+  intl: ^0.18.1
   collection: 1.16.0
   # 打开浏览器所需要的
   url_launcher: ^6.0.13
-  fluttertoast: 8.0.9
+  fluttertoast: ^8.2.1
   flutter_spinkit: ^5.1.0
   # 网络请求
   http: ^0.13.4
@@ -56,12 +56,12 @@ dependencies:
   flutter_swiper : ^1.1.6   #轮播组件
   flutter_screenutil: ^5.5.3 #屏幕适配
   permission_handler: ^10.0.0 #权限管理
-  cached_network_image: ^2.2.0+1
-  flutter_rating_bar: ^3.0.1+1
+  cached_network_image: ^3.2.1
+  flutter_rating_bar: ^4.0.1
   sqflite: ^2.0.3 #sqflite是Flutter的SQLite插件，它能在App端能够高效的存储和处理数据库数据
   get: ^4.6.5 #getx
   # 这个暂时先注释，安卓会报：Failed to transform activity-1.6.1.aar (androidx.activity:activity:1.6.1)
-#  image_picker: ^0.8.7 #选择图片
+#  image_picker: ^0.8.6+4 #选择图片
   animations: ^2.0.3 #flutter官方提供的动画
   webview_flutter: ^3.0.4 # webview以及和js交互
   flutter_pickers: ^2.1.8 #省市区选择器 参考：https://zhuanlan.zhihu.com/p/350350490
@@ -73,7 +73,7 @@ dependencies:
   #百度地图定位插件
   flutter_bmflocation: ^3.2.0
   #极光推送
-  jpush_flutter: ^2.3.6
+#  jpush_flutter: ^2.4.3
   #上拉加载下拉刷新,参考：https://pub.flutter-io.cn/packages/pull_to_refresh
   pull_to_refresh: ^2.0.0
   #获取设备信息
