--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_swiper : ^1.1.6   #轮播组件
   flutter_screenutil: ^5.5.3 #屏幕适配
   permission_handler: ^10.0.0 #权限管理
+  #图片缓存
   cached_network_image: ^3.2.1
   flutter_rating_bar: ^4.0.1
   sqflite: ^2.0.3 #sqflite是Flutter的SQLite插件，它能在App端能够高效的存储和处理数据库数据
