--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
 
-//        google()
-//        mavenCentral()
-//        jcenter()
+        google()
+        mavenCentral()
+        jcenter()
     }
 
     dependencies {
@@ -24,9 +24,9 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
-//        google()
-//        mavenCentral()
-//        jcenter()
+        google()
+        mavenCentral()
+        jcenter()
     }
 }
 
