--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   collection: 1.16.0
   # 打开浏览器所需要的
   url_launcher: ^6.0.13
-  fluttertoast: ^8.2.1
+#  fluttertoast: 8.0.2 这个插件突然报错了
   flutter_spinkit: ^5.1.0
   # 网络请求
   http: ^0.13.4
@@ -60,7 +60,7 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_rating_bar: ^4.0.1
   sqflite: ^2.0.3 #sqflite是Flutter的SQLite插件，它能在App端能够高效的存储和处理数据库数据
-  get: ^4.6.5 #getx状态管理
+  get: ^4.6.5 #getx
   # 这个暂时先注释，安卓会报：Failed to transform activity-1.6.1.aar (androidx.activity:activity:1.6.1)
 #  image_picker: ^0.8.6+4 #选择图片
   animations: ^2.0.3 #flutter官方提供的动画
