--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   #帧动画
   frame_animate_widget: ^1.0.0
+  #自己写的插件-测试
+  flutter_customappbar_plugin: ^0.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
