--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.18.1
+  intl: ^0.18.0
   collection: 1.17.1
   # 打开浏览器所需要的
   url_launcher: ^6.0.13
@@ -101,6 +102,8 @@ dependencies:
   path: ^1.8.3
   #加载html代码
   flutter_html: ^3.0.0-beta.2
+  #时间格式化工具
+  date_format: ^2.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
