--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,5 +37,23 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+    config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+            '$(inherited)',
+            ## dart: PermissionGroup.camera
+            'PERMISSION_CAMERA=1',
+            # dart: PermissionGroup. photos
+            'PERMISSION_PHOTOS=1',
+            'PERMISSION_PHOTOS_ADD_ONLY=1',
+            # dart: [PermissionGroup. location, PermissionGroup. locationAlways, PermissionGroup. locationWhenInUse]
+            'PERMISSION_LOCATION=1',
+            # dart: PermissionGroup.mediaLibrary
+            'PERMISSION MEDIA LIBRARY=1',
+            '$(inherited)',
+
+            ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
+            'PERMISSION_LOCATION=1',
+          ]
+      end
   end
 end
