--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -35,6 +35,15 @@
         			</array>
         		</dict>
         	</array>
+
+            <!-- 解决flutter_downloader插件在ios上下载完成后在 文件-我的iPhone不显示文件的问题 -->
+        	<key>UISupportsDocumentBrowser</key>
+            <true/>
+            <key>LSSupportsOpeningDocumentsInPlace</key>
+            <true/>
+            <key>UIFileSharingEnabled</key>
+            <true/>
+
         	<key>LSApplicationQueriesSchemes</key>
             <array>
                     <string>weixin</string>
