添加联系人列表

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -77,6 +77,8 @@
             <key>NSAllowsArbitraryLoadsInWebContent</key>
             <true/>
         </dict>
+ <key>NSContactsUsageDescription</key>
+        <string>This app requires contacts access to function properly.</string>
 		<key>io.flutter.embedded_views_preview</key>
 		<string>YES</string>
 		<!-- 相册 -->
