--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,7 +20,7 @@ buildscript {
 allprojects {
     repositories {
         //解决flutter相关插件下载不下来的问题
-//        maven { url "https://storage.googleapis.com/download.flutter.io" }
+        maven { url "https://storage.googleapis.com/download.flutter.io" }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
