--- a/ios/Podfile
+++ b/ios/Podfile
@@ -49,6 +49,7 @@ post_install do |installer|
             'PERMISSION_PHOTOS_ADD_ONLY=1',
             # dart: [PermissionGroup. location, PermissionGroup. locationAlways, PermissionGroup. locationWhenInUse]
             'PERMISSION_LOCATION=1',
+            'PERMISSION_CONTACTS=1',
             # dart: PermissionGroup.mediaLibrary
             'PERMISSION MEDIA LIBRARY=1',
             '$(inherited)',
