--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,8 +79,8 @@ dependencies:
 #  flutter_baidu_mapapi_utils: ^3.3.2
   #百度地图定位插件
 #  flutter_bmflocation: ^3.3.0
-  #极光推送
-  jpush_flutter: ^2.4.3
+  #极光推送，暂时注释，报错了
+  # jpush_flutter: ^2.4.5
   #上拉加载下拉刷新,参考：https://pub.flutter-io.cn/packages/pull_to_refresh
   pull_to_refresh: ^2.0.0
   #获取设备信息
@@ -126,6 +126,18 @@ dependencies:
 
   #pdf预览
   flutter_pdfview: ^1.3.1
+  # 获取通话记录
+  call_log: ^4.0.0
+
+  #获取手机联系人 start
+  azlistview: ^2.0.0
+  github_language_colors: ^1.0.1
+  common_utils: ^2.0.0
+  # 汉字转拼音
+  lpinyin: ^2.0.0
+  contacts_service: ^0.6.3
+  #获取手机联系人 end
+
 fluwx:
   #IOS的appid
   app_id: 'wx22d5ab853c3e8aea'
